--- a/.ci_support/win_c_compilervs2008cxx_compilervs2008python2.7.yaml
+++ b/.ci_support/win_c_compilervs2008cxx_compilervs2008python2.7.yaml
@@ -1,7 +1,11 @@
+c_compiler:
+- vs2008
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- vs2008
 numpy:
 - '1.11'
 pin_run_as_build:
@@ -9,4 +13,8 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '3.6'
+- '2.7'
+zip_keys:
+- - python
+  - c_compiler
+  - cxx_compiler
