--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.6.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.6.yaml
@@ -1,13 +1,13 @@
-build_number_decrement:
-- '0'
+c_compiler:
+- vs2015
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- conda/c3i-linux-64
+cxx_compiler:
+- vs2015
 numpy:
-- '1.9'
+- '1.11'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -15,7 +15,6 @@ pin_run_as_build:
 python:
 - '3.6'
 zip_keys:
-- - channel_sources
-  - channel_targets
-  - docker_image
-  - build_number_decrement
+- - python
+  - c_compiler
+  - cxx_compiler
