--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,11 +10,16 @@ source:
   sha256: 483894b3272b6c7d457d193f2a31bd417083fc9035b6965c43fd32223a3f6a4b
 
 build:
-  number: 2
+  number: 3
   script: '{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv '
 
 requirements:
   build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
+    - numpy                                  # [build_platform != target_platform]
+    - {{ stdlib('c') }}
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
@@ -23,7 +28,7 @@ requirements:
     - python
     - cython
   run:
-    - numpy
+    - {{ pin_compatible('numpy') }}
     - python
 
 test:
